# ML-Compass-App

./: README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
app/: README.md  chat_component.py  recommend_app.py  report_buttons.py  ui_components.py
mlcompass/: __init__.py  _compat.py  constants.py
mlcompass/analysis/: advisories.py  meta_features.py  profiling.py
mlcompass/data/meta_models/categorical/: categorical_classifier.txt  categorical_config.json  categorical_regressor.txt
mlcompass/data/meta_models/interaction/: interaction_classifier.txt  interaction_config.json
mlcompass/data/meta_models/numerical/: numerical_classifier.txt  numerical_config.json
mlcompass/data/meta_models/row/: row_classifier.txt  row_config.json  row_regressor.txt
mlcompass/evaluation/: metrics.py  training.py
mlcompass/recommendation/: engine.py  meta_models.py  verdicts.py
mlcompass/reporting/: generator.py
mlcompass/transforms/: applicator.py  detection.py  helpers.py
